# playSTUDIOS-test

./: .env  .gitignore  README.md  pyproject.toml
src/api/: main.py  models.py
src/api/routes/: __init__.py  fraud_detection.py
src/core/: fraud_model.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_api.py
