[project]
name = "playstudios-fraud-api"
version = "0.1.0"
description = "Simple FastAPI service for fraud detection inference."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "tensorflow>=2.12.0",
    "numpy>=1.24.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "huggingface_hub==1.1.5",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

